feat: cria página dedicada para criação do livro
- Adiciona nova página criar.html com formulário de upload
- Remove seção de upload do final da página principal
- Atualiza todos os links para redirecionar para criar.html
- Remove código JavaScript do formulário de index.html
- Adiciona seção de dicas para melhores resultados na página de criação

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -729,8 +729,8 @@
             <div class="text-3xl md:text-4xl font-hand font-bold flex items-center gap-2 text-gray-800 hover-wiggle cursor-default">
                 <i class="fas fa-paw text-pink-400" aria-hidden="true"></i> <span>PetStory</span>
             </div>
-            <a href="#pricing" class="font-hand text-lg md:text-xl underline decoration-wavy decoration-pink-400 hover:text-pink-500 text-gray-600 transition-colors">
-                Fazer meu pedido
+            <a href="criar.html" class="font-hand text-lg md:text-xl underline decoration-wavy decoration-pink-400 hover:text-pink-500 text-gray-600 transition-colors">
+                Criar meu livro
             </a>
         </header>
 
@@ -754,7 +754,7 @@
                 </p>
 
                 <div class="flex flex-col sm:flex-row gap-4 justify-center lg:justify-start mb-6">
-                    <a href="#pricing" class="btn-sticker btn-green px-8 py-4 text-lg md:text-xl w-full sm:w-auto transform -rotate-1 hover-scale" aria-label="Ir para página de preços e criar seu livro de colorir">
+                    <a href="criar.html" class="btn-sticker btn-green px-8 py-4 text-lg md:text-xl w-full sm:w-auto transform -rotate-1 hover-scale" aria-label="Ir para página de criação do livro de colorir">
                         Quero criar o meu! 🎨
                     </a>
                     <a href="#como-funciona" class="btn-sticker btn-blue px-6 py-4 text-base md:text-lg w-full sm:w-auto transform rotate-1" aria-label="Saiba como funciona o processo de transformação">
@@ -1014,7 +1014,7 @@
                     <p class="text-xs text-gray-400">Pagamento único • PIX ou Cartão</p>
                 </div>
 
-                <a href="#checkout" class="btn-sticker btn-pink w-full py-4 text-xl md:text-2xl hover:scale-105 transition shadow-lg" aria-label="Comprar kit completo de livro de colorir personalizado">
+                <a href="criar.html" class="btn-sticker btn-pink w-full py-4 text-xl md:text-2xl hover:scale-105 transition shadow-lg" aria-label="Criar kit completo de livro de colorir personalizado">
                     QUERO MEU KIT! 🐾
                 </a>
             </div>
@@ -1030,7 +1030,7 @@
                 <p class="text-gray-700 text-lg md:text-xl mb-6 font-hand leading-relaxed">
                     Que tal surpreender quem você ama com um presente único e personalizado? Perfeito para aniversários, Dia das Mães, Natal ou qualquer momento especial!
                 </p>
-                <a href="#pricing" class="btn-sticker btn-pink px-8 py-4 text-xl hover-scale inline-block" aria-label="Criar presente personalizado de livro de colorir">
+                <a href="criar.html" class="btn-sticker btn-pink px-8 py-4 text-xl hover-scale inline-block" aria-label="Criar presente personalizado de livro de colorir">
                     Fazer um Presente 🎀
                 </a>
             </div>
@@ -1086,6 +1086,22 @@
         </section>
 
         <!-- ========================================
+             📤 CTA PARA CRIAÇÃO
+             ======================================== -->
+        <section id="checkout" class="pl-0 md:pl-16 mb-20 reveal">
+            <div class="max-w-2xl mx-auto bg-gradient-to-br from-pink-100 to-purple-100 border-3 border-black rounded-xl p-8 md:p-12 text-center transform rotate-1">
+                <div class="text-5xl mb-6 animate-float">🎨</div>
+                <h2 class="font-hand text-3xl md:text-4xl font-bold mb-4">Pronto para Criar?</h2>
+                <p class="text-gray-700 text-lg md:text-xl mb-8 font-hand leading-relaxed">
+                    Clique no botão abaixo e comece a criar seu livro de colorir personalizado agora mesmo!
+                </p>
+                <a href="criar.html" class="btn-sticker btn-pink px-12 py-5 text-2xl md:text-3xl hover-scale inline-block shadow-lg" aria-label="Ir para página de criação do livro">
+                    Criar Meu Livro! 🐾
+                </a>
+            </div>
+        </section>
+
+        <!-- ========================================
              📞 FOOTER
              ======================================== -->
         <footer class="text-center text-gray-400 font-hand text-base md:text-lg border-t border-dashed border-gray-300 pt-8 mt-12">
@@ -1103,7 +1119,7 @@
             <span class="text-[10px] text-pink-500 font-bold line-through font-hand">R$ 97,90</span>
             <span class="text-2xl md:text-3xl font-hand font-bold text-gray-900 leading-none">R$ 27,90</span>
         </div>
-        <a href="#pricing" class="flex-1 btn-sticker btn-green py-3 text-base md:text-xl font-bold text-center shadow-none">
+        <a href="criar.html" class="flex-1 btn-sticker btn-green py-3 text-base md:text-xl font-bold text-center shadow-none">
             Quero Agora! 🎨
         </a>
     </div>
@@ -1358,6 +1374,7 @@
         };
         
         window.addEventListener('scroll', optimizedReveal, { passive: true });
+        
     </script>
 </body>
 </html>
